- remove percentage on dashboard-widget - fix filler width and height - shift position of the dashboard config button - fix alignment of dashboard table

--- a/src/app/child-dev-project/progress-dashboard-widget/progress-dashboard/progress-dashboard.component.scss
+++ b/src/app/child-dev-project/progress-dashboard-widget/progress-dashboard/progress-dashboard.component.scss
@@ -1,9 +1,10 @@
 @use 'src/app/core/dashboard/dashboard-widget-base';
 
 .filler {
-  width: 50%;
-  padding-left: 65px;
-  padding-right: 10px;
+  width: 45%;
+  padding-left: 50px;
+  padding-right: 5px;
+
 }
 
 .dashboard-config {
